manifests/ingress/teleport.yaml
# Teleport IngressRoute (TLS passthrough)
# TCP :8443 passthrough → teleport:443
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport
  namespace: teleport
spec:
  entryPoints:
    - teleport
  routes:
    - match: HostSNI(`*`)
      services:
        - name: teleport
          port: 443
  tls:
    passthrough: true
